--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,27 @@
 body {
   font-family: 'Poppins', sans-serif;
 }
+
+header img { /*to adjust menu-arrow to logo*/
+  vertical-align: middle;
+  line-height: 50%;
+}
+
+section {
+  width: 327px;
+  height: 90px;
+}
+
+h1, p {
+  font-size: 25px;
+  line-height: 30px;
+  letter-spacing: -0.6px;
+}
+
+h1 {
+  color: #FF5A5F;
+}
+
+p {
+  color: #484848;
+}
