styles.css: added comment rgrding font to body prperty

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif; /* closest google-font to Airbnb's circular */
 }
 
 /* ###################  Header  ############################# */
