--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-  border: 1px  black;
+  border: 1px solid black;
 }
 
 body {
@@ -69,14 +69,9 @@ h3 {
 
 figcaption {
   width: 177px;
-  display: flex;
-  flex-wrap: wrap;
+  font-size: 14px
 }
 
-figcaption p {
-  font-size: 14px;
-  line-height: ;
-}
 
 figcaption img { /*star ratings icon. without set dimensions img stretches out*/
   width: 12px;
