--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Poppins', sans-serif; /* closest google-font to Airbnb's circular */
   color: #484848;
   margin: 24px;
+  height: 3500px;
 }
 
 p {
@@ -79,7 +80,7 @@ figure {
 }
 
 figcaption {
-  width: 177px;
+  width: ;
   font-size: 14px; /*valid on price and description text*/
 }
 
