--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,16 @@ body {
   padding: 0;
 }
 
+h1 {
+  padding: 24px 0;
+}
+
 
 h2 {
   font-size: 22px;
   font-weight: bold;
   margin-right: 0;
+  padding-top: 24px; 
 }
 
 h3 {
@@ -105,6 +110,7 @@ nav {
   letter-spacing: 0.5px;
 
 
+  padding-top: 50px;
   width: 80%;
   padding-bottom: 12px;
   border-bottom: 0.5px solid grey;
@@ -135,7 +141,7 @@ aside { /*contains figure and figcaption*/
   display: flex;
   flex-direction: row;
   flex-flow: nowrap;
-  justify-content: space-between;
+  justify-content: flex-start;
 
   overflow: auto;
 
@@ -150,21 +156,22 @@ aside { /*contains figure and figcaption*/
 
 figure {
   margin: 6px;
+  ;
 }
-
-
-
 
 .exp-figure {
   width: 50% ;
+  margin: 6px;
 }
 
 .logements-figure {
   width: 65% ;
+  margin: 6px;
 }
 
 .destinations-figure {
   width: 33%;
+  margin: 6px;
 }
 
 figure img {
@@ -205,6 +212,12 @@ figcaption img { /*without set dimensions img (star-ratings) stretches out*/
 .comments-figcaption {
   font-size: 12px;
   margin: 0; /*removed margin otherwise it doesn't align to top*/
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+
+
+
 }
 
 /* #### Button #### */
