--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-  border: 1px black;
+  border: 1px  black;
 }
 
 body {
@@ -7,6 +7,11 @@ body {
   color: #484848;
   margin: 0;
   padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: #484848;
 }
 
 h1 {
@@ -21,17 +26,22 @@ h2 {
   padding-top: 24px;
 }
 
-h3 {
+h3, h4 {
   font-size: 15px;
   font-weight: bold;
   letter-spacing: 0.2px;
-
   margin: 0;
 }
+
 
 header, h1, h2, form, nav, aside, p {
   margin: 24px;
 }
+
+::-webkit-scrollbar {
+    display: none;
+}
+
 
 /* ###################  Header  ############################# */
 
@@ -242,4 +252,65 @@ button {
   text-align: center;
   color: #fff;
   transition: background 0.3s, border-color 0.3s;
+}
+
+/* #### Footer #### */
+
+footer {
+
+  padding: 24px;
+  margin-top: 24px;
+
+  border-top: 1px solid rgb(219, 219, 219);
+}
+
+.select-footer {
+  margin: 24px 0;
+}
+
+select {
+  padding: 12px 40px 12px 12px;
+  margin: 8px;
+  width: 175px;
+
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(219, 219, 219);
+  -webkit-appearance: menulist-button;
+
+  font-size: 19px;
+  line-height: 24px;
+  color: #767676;
+  background-color: #fff;
+}
+
+.corporate-footer {
+  width: ; /*applicable solely to mobile and tablet formats*/
+
+  display: flex;
+  flex-direction: row; /*imgs (logo + menu-arrow) are next to eachother*/
+  align-items: center; /*aligns img menu-arrow to logo. without it img menu-arrow stretches*/
+  justify-content: flex-start;
+}
+
+
+.corporate-footer img {
+  margin-right: 10px;
+}
+
+
+.bottom-footer, .select-footer {
+  width: 100%;
+
+  display: inline-flex;
+  white-space: wrap;
+  justify-content: space-between;
+}
+
+.links-footer a, .socialmedia-footer img {
+  margin: 5px;
+}
+
+.links-footer a {
+  font-size: 12px;
 }
