--- a/css/styles.css
+++ b/css/styles.css
@@ -58,3 +58,31 @@ form p {
   text-overflow: ellipsis;
   overflow: hidden;
 }
+
+/* -- main nav -- */
+
+nav {
+  font-family: Helvetica, sans-serif;
+  font-size: 11px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+
+
+  padding-top: 50px;
+  padding-bottom: 30px;
+  border-bottom: 0.5px solid lightgrey;
+
+  overflow: auto;
+  white-space: nowrap;
+}
+
+nav a {
+  margin-right: 16px;
+}
+
+nav a span {
+  color: #008489;
+  padding-bottom: 12px;
+  border-bottom: 2px solid #008489;
+}
