--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ a {
     display: none;
 }
 
-/* ------------- header ------------- */
+/* -------------------------- header -------------------------- */
 
 header {
   display: flex;
@@ -22,7 +22,7 @@ header {
   justify-content: flex-start;
 }
 
-/* ------------- main ------------- */
+/* -------------------------- main -------------------------- */
 
 
 h1{
@@ -37,7 +37,7 @@ h1 span {
   font-weight: bold;
 }
 
-/* -- form -- */
+/* ------------- form ------------- */
 
 form {
   padding: 11px 12px;
@@ -59,7 +59,7 @@ form p {
   overflow: hidden;
 }
 
-/* -- main nav -- */
+/* ------------- main nav ------------- */
 
 nav {
   font-family: Helvetica, sans-serif;
@@ -85,4 +85,66 @@ nav a span {
   color: #008489;
   padding-bottom: 12px;
   border-bottom: 2px solid #008489;
+}
+
+/* ------------- section ------------- */
+
+h2 {
+  width: 100%;
+}
+
+section div { /* contains figures */
+  overflow: auto;
+  display: flex;
+}
+
+figure {
+  margin: 6px;
+}
+
+.experience {
+  min-width: 45%;
+}
+
+.home {
+  min-width: 60%;
+}
+
+.city {
+  min-width: 30%;
+}
+
+.figure-img {
+  width: 100%;
+  height: auto;
+}
+
+
+figcaption p {
+  margin: 0;
+  font-size: 14px;
+  flex-flow: nowrap;
+  justify-content: flex-start;
+
+  line-height: 1.5em;
+  max-height: 3em;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+figcaption p span {
+  font-weight: bold;
+}
+
+.rating {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.rating img, .rating p {
+  padding: 1px;
+  font-size: 12px;
 }
