index.html / styles.css : mobile version finished

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ h1 span {
   font-weight: bold;
 }
 
-/* ------------- form ------------- */
+/* ------------- search (form) ------------- */
 
 form {
   padding: 5px 12px;
